# gha-update

./: CHANGES.md  LICENSE.txt  README.md  pyproject.toml  tox.ini
.github/workflows/: publish.yaml  tests.yaml
docs/: conf.py  index.md  tox.md
requirements/: dev.txt  docs.txt
src/gha_update/: _cli.py  _core.py
